[package]
name = "ssimoe"
version = "0.1.0"
authors = ["Ischa Abraham <contact@ischa.dev>"]
edition = "2018"

[dependencies]
actix-utils = "3.0.0-beta.4"
actix-web = "4.0.0-rc.3"
clap = { version = "3.1.0", features = [ "derive" ] }
tokio = { version = "1.17.0", features = [ "macros", "io-std", "io-util", "sync", "rt-multi-thread" ] }
tokio-stream = { version = "0.1.8", features = [ "sync" ] }
uds = "0.2.6"
