[package]
name = "ssimoe"
version = "0.1.0"
authors = ["Ischa Abraham <contact@ischa.dev>"]
edition = "2018"

[dependencies]
clap = { version = "3.1.2", features = [ "derive" ] }
tokio = { version = "1.17.0", features = [ "macros", "io-std", "io-util", "sync", "rt-multi-thread", "net" ] }
tokio-stream = { version = "0.1.8", features = [ "sync" ] }
